# Palace

./: .gitignore  Cargo.toml  RDSS_room_script_converter.md  README.md
.opencode/: AGENTS.md
client/: CMakeLists.txt
client/resources/: qml.qrc
client/resources/qml/: ChatPanel.qml  LoginDialog.qml  Main.qml  RoomList.qml  RoomView.qml  UserList.qml
client/src/: MainWindow.cpp  MainWindow.h  main.cpp
client/src/network/: Connection.cpp  Connection.h  Protocol.cpp  Protocol.h  Session.cpp  Session.h
docs/: ARCHITECTURE.md  IPTSCRAE_PROTOCOL.md
lib/thepalace/: Cargo.toml  encode.tbl
lib/thepalace/src/: algo.rs  buffer.rs  ffi.rs  lib.rs  prop.rs
lib/thepalace/src/assets/: mod.rs
lib/thepalace/src/iptscrae/: ast.rs  context.rs  events.rs  lexer.rs  mod.rs  parser.rs  room_script.rs  room_script_converter.rs  room_script_parser.rs  token.rs  value.rs  vm.rs
lib/thepalace/src/iptscrae/builtins/: array.rs  logic.rs  math.rs  mod.rs  palace.rs  stack.rs  string.rs
lib/thepalace/src/iptscrae/builtins/palace/: graphics.rs  messaging.rs  mod.rs  navigation.rs  props.rs  room.rs  system.rs  user.rs
lib/thepalace/src/messages/: admin.rs  asset.rs  auth.rs  chat.rs  flags.rs  message.rs  message_id.rs  mod.rs  protocol.rs  room.rs  server.rs  user.rs
lib/thepalace/src/messages/room/: door_ops.rs  hotspot_ops.rs  mod.rs  picture_ops.rs  prop_ops.rs  records.rs  room_ops.rs
lib/thepalace/src/messages/user/: mod.rs  records.rs  user_ops.rs
lib/thepalace/src/room/: mod.rs
server/: Cargo.toml  palace.json.example
server/src/: config.rs  main.rs  state.rs
server/src/db/: mod.rs  models.rs  rooms.rs  users.rs
server/src/net/: handler.rs  mod.rs
thepalace/: Cargo.toml  build.rs
thepalace/src/: algo.rs  ext.rs  lib.rs  msg.rs  net.rs  prop.rs
tools/: gen_encrypt_table.rs
