[package]
name = "thepalace"
version = "0.1.0"
edition = "2024"
description = "ThePalace common functionality"

[features]
default = []
net = ["bitflags", "bytes"]
prop = ["bitflags", "bytes", "flate2", "png"]

[build-dependencies]
bytemuck = "1.22.0"

[dependencies]
bitflags = { version = "2.9.0", optional = true }
bytes = { version = "1.10.1", optional = true }
cfg-if = "1.0.0"
flate2 = { version = "1.1.1", optional = true }
png = { version = "0.17.16", optional = true }
